--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,4 +1,4 @@
 [toolchain]
-channel = "nightly-2025-09-20"
+channel = "stable"
 # switch to same stable on release on Dec 11 2025
 components = ["rustfmt"]
